# django_rest_framework_template

./: .dockerignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
django_rest_framework_template/: settings.py
docs/: 01_バージョンについて.md
